# chat_app

chat_app-master/: Cargo.toml
chat_app-master/src/: auth.rs  main.rs
chat_app-master/src/db/: message.rs  mod.rs  user.rs
chat_app-master/src/handlers/: auth.rs  chat.rs
chat_app-master/src/models/: message.rs  user.rs
