[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-cors = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1.1"
mongodb = { version = "2.5", features = ["tokio-runtime"] }
dotenv = "0.15.0"
env_logger = "0.10"
uuid = "1.2"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.4"
rand = "0.8"
password-hash = "0.3"
